--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
   "dependencies": {
     "@babel/runtime": "^7.4.4",
     "base64-js": "^1.3.0",
-    "md5": "^2.2.1"
+    "md5": "^2.2.1",
+    "object-assign": "^4.1.1"
   }
 }
