--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   ],
   "scripts": {
     "clean": "rimraf dist lib es",
-    "lint": "eslint src example",
-    "test": "cross-env BABEL_ENV=test jest",
+    "lint": "eslint src test",
+    "test": "npm run build && npm run serve:test && karma start",
     "test:watch": "npm test -- --watch",
     "test:cov": "npm test -- --coverage",
     "build": "npm run clean && npm run build:es && npm run build:commonjs && npm run build:umd && npm run build:umd:min",
@@ -23,7 +23,8 @@
     "build:umd": "cross-env NODE_ENV=development webpack",
     "build:umd:min": "cross-env NODE_ENV=production webpack",
     "bundle:stats": "cross-env NODE_ENV=production webpack --profile --json > stats.json",
-    "serve": "node example/server.js"
+    "serve": "node test/server.js",
+    "serve:test": "cross-env AUTO_KILL=true node test/server.js &"
   },
   "repository": {
     "type": "git",
@@ -59,20 +60,26 @@
     "@babel/plugin-transform-modules-commonjs": "^7.4.4",
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
+    "ali-oss": "^6.1.1",
+    "axios": "^0.19.0",
     "babel-eslint": "^7.2.3",
-    "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.5",
+    "chai": "^4.2.0",
     "cross-env": "^5.2.0",
     "dotenv": "^8.0.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.2",
     "husky": "^2.1.0",
-    "jest": "^24.7.1",
+    "karma": "^4.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.2",
+    "karma-mocha": "^1.3.0",
     "koa": "^2.7.0",
     "koa-static": "^5.0.0",
     "lint-staged": "^8.1.5",
     "mkdirp": "^0.5.1",
+    "mocha": "^6.1.4",
     "rimraf": "^2.6.1",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1"
