--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.4.1",
   "description": "A tiny aliyun oss sdk for browser which focus on uploading",
   "main": "lib/index.js",
-  "types": "index.d.ts",
+  "types": "types/index.d.ts",
   "engines": {
     "node": ">=6.0.0"
   },
@@ -11,6 +11,7 @@
     "dist",
     "lib",
     "es",
+    "types",
     "vendor"
   ],
   "scripts": {
